fixed dashboard spacing

--- a/Frontend/src/Pages/DashboardPages/AddProduct/AddProduct.css
+++ b/Frontend/src/Pages/DashboardPages/AddProduct/AddProduct.css
@@ -1,5 +1,5 @@
 .page-content {
-  margin-bottom: 70px;
+  margin-bottom: 70px 70px 0 70px;
 }
 
 .heading {
